[tool.poetry]
name = "arq-prometheus"
version = "0.1.0"
description = "Prometheus metrics for arq job queues"
authors = ["Santiago Fraire Willemoes <santiago.fraire@kpn.com>"]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
readme = "README.md"
keywords = ["arq", "prometheus", "metrics"]

[tool.poetry.dependencies]
python = "^3.8"
prometheus-client = "^0.14.1"
arq = "^0.22"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.961"
black = "^22.6.0"
ipython = "^8.4.0"
isort = "^5.10.1"
flake9 = "^3.8.3"
commitizen = "^2.28.0"
pytest-cov = "^3.0.0"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
  "pyproject.toml:version",
  "arq_prometheus/__init__.py:__version__",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88

[tool.isort]
profile = "black"
known_first_party = ["arq_prometheus", "tests"]
