[tool.poetry]
name = "arq-prometheus"
version = "0.2.2"
description = "Prometheus metrics for arq job queues"
authors = ["Santiago Fraire Willemoes <santiago.fraire@kpn.com>"]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
readme = "README.md"
keywords = ["arq", "prometheus", "metrics"]

[tool.poetry.dependencies]
python = "^3.8"
prometheus-client = "^0.14.1"
arq = "^0.23"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
mypy = "^0.961"
black = "^22.6.0"
ipython = "^8.4.0"
isort = "^5.10.1"
commitizen = "^2.28.0"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.19.0"
pytest-mock = "^3.8.2"
Flake8-pyproject = "^1.1.0"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.2"
version_files = [
  "pyproject.toml:version",
  "arq_prometheus/__init__.py:__version__",
]
update_changelog_on_bump = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88

[tool.isort]
profile = "black"
known_first_party = ["arq_prometheus", "tests"]
